# low-latency-feed-handler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/benchmarks/: benchmark_utils.hpp
include/datastructures/: lockfree_ringbuffer.hpp
include/optimizations/: simd_parser.hpp
include/parser/: protocol_parser.hpp  simple_feed_parser.hpp  tick.hpp
reports/: results.csv
scripts/: plot_results.py
src/: main.cpp
src/benchmarks/: benchmarks.cpp
src/datastructures/: tick_store.cpp
src/io/: epoll_io.cpp  network_io.hpp  packet_buffer.hpp
src/optimizations/: checksum_avx.cpp  simd_parser.cpp
src/parser/: simple_feed_parser.cpp
tests/: datastructures_tests.cpp  io_tests.cpp  optimizations_tests.cpp  parser_tests.cpp
